--- a/restaurant-front/src/modules/waiter/components/additional-notes/additional-notes.component.scss
+++ b/restaurant-front/src/modules/waiter/components/additional-notes/additional-notes.component.scss
@@ -87,3 +87,14 @@ a:hover {
 img {
     height: 200px;
 }
+
+
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
