--- a/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.html
+++ b/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.html
@@ -1,60 +1,92 @@
-<div id="container-div" >
-    <div id="img-div">
-      <img
-        src="https://media.giphy.com/media/UJvttT1byONauiwlex/giphy.gif"
-        alt="”animated”"
-        (click)="this.router.navigate([''])"
-      />
+<div id="container-div">
+  <div id="img-div">
+    <img
+      src="https://media.giphy.com/media/UJvttT1byONauiwlex/giphy.gif"
+      alt="”animated”"
+      (click)="this.router.navigate([''])"
+    />
+  </div>
+  <div id="form-holder-div">
+    <h2>Customize {{ this.menuItemWithIngredients.name }}</h2>
+    <mat-divider></mat-divider>
+    <div class="row">
+      <span style="margin-right: 50%">Price: </span>
+      <span style="text-align: right"
+        >$ {{ this.menuItemWithIngredients.price }}.00
+      </span>
     </div>
-    <div id="form-holder-div">
-      <h3>Customize</h3>
-      <div class="row">
+
+    <mat-divider></mat-divider>
+    <div class="row">
       <mat-selection-list #ingredients class="custom-scroll-bar">
-        <mat-list-option *ngFor="let i of this.menuItemWithIngredients.ingredients">
-          {{i.name}}
+        <!--NOTE isAlergen is actually isElementSelected-->
+        <mat-list-option
+          *ngFor="let i of this.menuItemWithIngredients.ingredients"
+          [selected]="i.isAlergen"
+          [value]="i"
+        >
+          {{ i.name }}
         </mat-list-option>
       </mat-selection-list>
-      </div>
-      <div class="row" >
-        <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Quantity</mat-label>
-            <input matInput value="1" type="number" min="1">
-          </mat-form-field>
-      </div>
+    </div>
+    <div class="row">
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label style="color: #b3b3b3"
+          >Quantity
+          <span *ngIf="this.menuItemWithIngredients.type == 'drink'"
+            >({{ this.menuItemWithIngredients.container }})</span
+          ></mat-label
+        >
+        <input matInput type="number" min="1" #quantity [value]="this.currentQ"/>
+      </mat-form-field>
+    </div>
 
+    <div class="row">
+      <mat-form-field
+        appearance="fill"
+        style="background-color: rgb(0 0 0 / 0%)"
+      >
+        <mat-label style="color: #b3b3b3">Priority</mat-label>
+        <mat-select [value]="this.menuItemWithIngredients.priority" #priority>
+          <mat-option *ngFor="let p of priorities" [value]="p">
+            {{ p }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
 
-      <div class="row" *ngIf="this.menuItemWithIngredients.type == 'dish'">        
-        <mat-form-field appearance="fill">
-            <mat-label>Priority</mat-label>
-            <mat-select>
-              <mat-option *ngFor="let p of priorities" [value]="p">
-                {{p}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-      </div>
-      <mat-divider></mat-divider>
+    <div class="modal-footer">
       
-      <div class="modal-footer" >
-        <button
-          mat-flat-button
-          type="button"
-          color="accent"
-          class="btn btn-danger"
-          (click)="cancel()"
-        >
+      <button
+        mat-flat-button
+        type="button"
+        color="accent"
+        class="btn btn-danger"
+        (click)="cancel()"
+      >
         Cancel
-        </button>
-        <button
-          mat-flat-button
-          type="button"
-          color="primary"
-          class="btn btn-primary"
-          (click)="addToOrder()"
-        >
-           Add to order
-        </button>
-      </div>
+      </button>
+      <button *ngIf="!this.editMode"
+        mat-flat-button
+        type="button"
+        color="primary"
+        class="btn btn-primary"
+        (click)="addToOrder()"
+      >
+        Add to order
+      </button>
+      
+      <button *ngIf="this.editMode"
+        mat-flat-button
+        type="button"
+        color="primary"
+        class="btn btn-primary"
+        (click)="saveChanges()"
+        matTooltip="Save changes to ordered item."
+      >
+        Save
+      </button>
     </div>
   </div>
-  <div class="jw-modal-background"></div>
+</div>
+<div class="jw-modal-background"></div>
