--- a/restaurant-front/src/modules/waiter/components/select-menu-items/select-menu-items.component.html
+++ b/restaurant-front/src/modules/waiter/components/select-menu-items/select-menu-items.component.html
@@ -102,4 +102,8 @@
     </div>
   </div>
   
-<app-customize-ordered-item *ngIf="this.showModalCustomizeOrderedItem != -1" [menuItemId]="this.showModalCustomizeOrderedItem" (onCustomizeOrderedItemClose)='onCustomizeOrderedItemCloseClicked($event)'></app-customize-ordered-item>
+<app-customize-ordered-item 
+*ngIf="this.showModalCustomizeOrderedItem != -1" 
+[menuItemId]="this.showModalCustomizeOrderedItem" 
+(onCustomizeOrderedItemClose)='onCustomizeOrderedItemCloseClicked($event)' 
+(onAddToOrder)='onAddToOrderClicked($event)'></app-customize-ordered-item>
