--- a/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
+++ b/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
@@ -1,93 +1,131 @@
 <mat-toolbar class="mat-elevation-z8">
-    <button
-      mat-icon-button
-      *ngIf="sidenav.mode === 'over'"
-      (click)="sidenav.toggle()"
-    >
-      <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
-      <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
-    </button>
-    <span class="span">NOTI</span>
+  <button
+    mat-icon-button
+    *ngIf="sidenav.mode === 'over'"
+    (click)="sidenav.toggle()"
+  >
+    <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
+    <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
+  </button>
+  <span class="span">NOTI</span>
 </mat-toolbar>
 
 <mat-sidenav-container>
-    <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
-        <img
-          class="avatar mat-elevation-z8"
-          src="https://media.giphy.com/media/UJvttT1byONauiwlex/giphy.gif"
-          alt="”animated”"
-          (click)="this.router.navigate([''])"
-        />
-    
-        <h4 class="name">Ordered items</h4>
-   
-        <!--
-        <mat-action-list class="custom-scroll-bar" *ngFor="let waiter of waiterList">
-          <button mat-list-item (click)="changeAccount(waiter.user.username)" 
-          matTooltip="Change account">
-            <app-badge [badgeContent]="waiter.badgeNum"></app-badge>
-            <span>{{waiter.user.username}}</span>
-            <mat-icon matBadgePosition="after" color="primary" *ngIf="waiter.user.username === this.user.username"
-              >check</mat-icon
-            >
-          </button>
-          
-        </mat-action-list>-->
+  <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+    <img
+      class="avatar mat-elevation-z8"
+      src="https://media.giphy.com/media/UJvttT1byONauiwlex/giphy.gif"
+      alt="”animated”"
+      (click)="this.router.navigate([''])"
+    />
 
-        <mat-action-list class="custom-scroll-bar">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 ">
-            <ng-container matColumnDef="quantity">
-              <th mat-header-cell *matHeaderCellDef>Quantity</th>
-              <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
-            </ng-container>
-          
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef>Name</th>
-              <td mat-cell *matCellDef="let element">{{element.name}}</td>
-            </ng-container>
-          
-            <ng-container matColumnDef="details">
-              <th mat-header-cell *matHeaderCellDef>Details</th>
-              <td mat-cell *matCellDef="let element">
-                  <button class="details" (click)="viewOrderedItemDetails(element)" matTooltip="View ordered item details.">
-                    <mat-icon>list</mat-icon>
-                  </button>
-              </td>
-            </ng-container>
-                    
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-        </mat-action-list>
+    <h4 class="name">Ordered Items</h4>
 
-        <mat-divider></mat-divider>
-        <div class="row">
-            <span style="margin-right: 50%;">Total cost: </span>
-            <span style="text-align: right;">{{this.totalCost}} </span>
-        </div>
-        
-        <mat-divider></mat-divider>
+    <mat-action-list class="custom-scroll-bar">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="quantity">
+          <th mat-header-cell *matHeaderCellDef>Quantity</th>
+          <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
+        </ng-container>
 
-        <div class="modal-footer" >
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="details">
+          <th mat-header-cell *matHeaderCellDef>Details</th>
+          <td mat-cell *matCellDef="let element">
             <button
-              mat-flat-button
-              type="button"
-              color="accent"
-              class="btn btn-danger"
-              (click)="cancel()"
+              class="details"
+              (click)="viewOrderedItemDetails(element)"
+              matTooltip="View ordered item details."
             >
-              Cancel
+              <mat-icon>list</mat-icon>
             </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef>Delete</th>
+          <td mat-cell *matCellDef="let element">
             <button
-              mat-flat-button
-              type="button"
-              color="primary"
-              class="btn btn-primary"
-              (click)="confirm()"
+              class="details"
+              (click)="onDeleteOrderedItemClicked(element)"
+              matTooltip="Delete ordered item."
             >
-              Confirm
+              <mat-icon>delete_forever</mat-icon>
             </button>
-          </div>
-        </mat-sidenav>
-      <app-select-menu-items></app-select-menu-items>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </mat-action-list>
+
+    <mat-divider></mat-divider>
+    <div class="row">
+      <span style="margin-right: 50%; font-size: 1rem; ">Total cost: </span>
+      <span style="text-align: right; font-size: 1rem; "
+        >$ {{ this.totalCost }}.00
+      </span>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <button mat-button class="menu-button" (click)="onAdditionalNotesClicked()">
+      <mat-icon>notes</mat-icon>
+      <span>Additional notes</span>
+    </button>
+
+    <div class="modal-footer">
+      <button
+        mat-flat-button
+        type="button"
+        color="accent"
+        class="btn btn-danger"
+        (click)="cancel()"
+      >
+        Cancel
+      </button>
+      <button
+        mat-flat-button
+        type="button"
+        color="primary"
+        class="btn btn-primary"
+        (click)="confirm()"
+      >
+        Confirm
+      </button>
+    </div>
+  </mat-sidenav>
+  <app-select-menu-items
+    (onAddToOrderForwarded)="onAddToOrderForwardedClicked($event)"
+  ></app-select-menu-items>
 </mat-sidenav-container>
+<app-customize-ordered-item
+  *ngIf="this.showOrderedItemDetails"
+  [orderedItemDetails]="this.currentOrderedItemDetails"
+  (onCustomizeOrderedItemClose)="onCustomizeOrderedItemCloseClicked($event)"
+  (onEditOrderedItem)="onEditOrderedItemClicked($event)"
+>
+</app-customize-ordered-item>
+<app-confirm-action
+  *ngIf="this.showConfirmAction"
+  [confirmActionTitle]="this.confirmActionTitleDelete"
+  (onConfirmActionCancelled)="onConfirmActionCancelledClicked($event)"
+  (onConfirmActionConfirmed)="onConfirmActionConfirmedClicked($event)"
+></app-confirm-action>
+<app-additional-notes
+  *ngIf="this.showAdditionalNotes"
+  [currentNotes]="this.currentAdditionalNotes"
+  (onAdditionalNotesClose)="onAdditionalNotesCloseClicked($event)"
+  (onAdditionalNotesConfirm)="onAdditionalNotesConfirmClicked($event)"
+></app-additional-notes>
+<app-pay-order
+  *ngIf="this.showPaymentModal"
+  [currentOrderId]="this.createdOrderId"
+  [showPaymentQuestion]="true"
+  (onPaylater)="onPaylaterClicked($event)"
+></app-pay-order>
