--- a/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
+++ b/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
@@ -128,4 +128,5 @@
   [currentOrderId]="this.createdOrderId"
   [showPaymentQuestion]="true"
   (onPaylater)="onPaylaterClicked($event)"
+  (onPayOrderClose)="onPayOrderCloseClicked($event)"
 ></app-pay-order>
