--- a/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.scss
+++ b/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.scss
@@ -44,7 +44,7 @@
   z-index: 100;
 }
 
-h3, h4 {
+h3, h4, h2 {
   color: white;
 }
 
@@ -89,7 +89,7 @@ img {
 }
 
 mat-action-list {
-  max-height: 45%;
+  max-height: 250px;
   overflow: auto;
 }
 
@@ -137,4 +137,12 @@ mat-divider {
 .name {
   margin-top: 8px;
   font-weight: normal;
+}
+
+.mat-input-element:disabled, .mat-input-element, .mat-form-field-type-mat-native-select.mat-form-field-disabled .mat-form-field-infix::after {
+  color: #fafafa;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+  background-color: rgb(0 0 0 / 8%);
 }
