--- a/restaurant-front/src/modules/waiter/components/table-options/table-options.component.html
+++ b/restaurant-front/src/modules/waiter/components/table-options/table-options.component.html
@@ -80,7 +80,43 @@
       <div class="row" *ngIf="this.table.occupied && this.table.claimed && (this.table.waiterUsername == this.currentUser.username)">
         <span >Active orders</span>
         
-        <span>TODO</span>
+        <mat-action-list class="custom-scroll-bar">
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <ng-container matColumnDef="orderNumber">
+              <th mat-header-cell *matHeaderCellDef>Order#</th>
+              <td mat-cell *matCellDef="let element">Order {{ element}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="edit">
+              <th mat-header-cell *matHeaderCellDef>Edit</th>
+              <td mat-cell *matCellDef="let element">
+                <button
+                  class="details"
+                  (click)="editOrder(element)"
+                  matTooltip="Edit order."
+                >
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+              
+            <ng-container matColumnDef="view">
+              <th mat-header-cell *matHeaderCellDef>View bill</th>
+              <td mat-cell *matCellDef="let element">
+                <button
+                  class="details"
+                  (click)="viewOrderAndBill(element)"
+                  matTooltip="View order and bill."
+                >
+                  <mat-icon>view_headline</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </mat-action-list>
       </div>
       <mat-divider></mat-divider>
       <div id="button-div" *ngIf="!(this.table.occupied && this.table.claimed && (this.table.waiterUsername == this.currentUser.username))">
