--- a/restaurant-front/src/modules/waiter/components/table-options/table-options.component.scss
+++ b/restaurant-front/src/modules/waiter/components/table-options/table-options.component.scss
@@ -1,128 +1,160 @@
 #container-div {
-    //background-color: #000;
-    //opacity: 0.9;
-    position: fixed;
-    /*position: absolute;*/
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    padding-top: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: 800;
-  }
-  
-  #form-holder-div {
-    opacity: 1;
-    background-color: #424242;
-    width: 500px;
-    margin: auto;
-    margin-top: -80px;
-    /*height: 300px;*/
-    text-align: center;
-    padding: 30px;
-    border-radius: 10px;
-    margin-bottom: 10.5vh;
-    padding-bottom: 20px;
-    z-index: 1000;
-    color: #fafafaaf;
-    font-size: 1rem;
-    font: 400 14px/20px Roboto, "Helvetica Neue", sans-serif;
-    letter-spacing: normal;
-  }
+  //background-color: #000;
+  //opacity: 0.9;
+  position: fixed;
+  /*position: absolute;*/
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding-top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 800;
+}
 
+#form-holder-div {
+  opacity: 1;
+  background-color: #424242;
+  width: 500px;
+  margin: auto;
+  margin-top: -80px;
+  /*height: 300px;*/
+  text-align: center;
+  padding: 30px;
+  border-radius: 10px;
+  margin-bottom: 10.5vh;
+  padding-bottom: 20px;
+  z-index: 1000;
+  color: #fafafaaf;
+  font-size: 1rem;
+  font: 400 14px/20px Roboto, "Helvetica Neue", sans-serif;
+  letter-spacing: normal;
+}
 
 .jw-modal-background {
-    /* modal background fixed across whole screen */
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+  /* modal background fixed across whole screen */
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
-    /* semi-transparent black  */
-    background-color: #000;
-    opacity: 0.85;
-    
-    /* z-index must be below .jw-modal and above everything else  */
-    z-index: 200;
+  /* semi-transparent black  */
+  background-color: #000;
+  opacity: 0.85;
+
+  /* z-index must be below .jw-modal and above everything else  */
+  z-index: 200;
 }
 
 h3 {
-    margin-top: 10px;
-    color: white;
+  margin-top: 10px;
+  color: white;
 }
 
 mat-form-field {
-    width: 400px;
+  width: 400px;
 }
 
 input {
-    color: white;
+  color: white;
 }
 
 .submit-button {
-    border: 1.5px solid dimgray;
-    margin-top: 20px;
-    width: 400px;
-    color: white;
+  border: 1.5px solid dimgray;
+  margin-top: 20px;
+  width: 400px;
+  color: white;
 }
 
 .submit-button:hover {
-    border: 1.5px solid rgb(194, 24, 91);
-    background-color: rgb(180, 23, 86);
-    color: white;
+  border: 1.5px solid rgb(194, 24, 91);
+  background-color: rgb(180, 23, 86);
+  color: white;
 }
 
 .btn {
-    border: 1.5px solid dimgray;
-    margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
-    width: 200px;
-    color: white;
+  border: 1.5px solid dimgray;
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 200px;
+  color: white;
 }
 
 .btn-danger:hover {
-    border: 1.5px solid rgb(194, 24, 91);
-    background-color: rgb(180, 23, 86);
-    color: white;
+  border: 1.5px solid rgb(194, 24, 91);
+  background-color: rgb(180, 23, 86);
+  color: white;
 }
 
 .btn-primary:hover {
-    border: 1.5px solid rgb(13, 16, 196);
-    background-color: rgb(11, 13, 182);
-    color: white;
+  border: 1.5px solid rgb(13, 16, 196);
+  background-color: rgb(11, 13, 182);
+  color: white;
 }
 
 a {
-    color: rgb(194, 24, 91);
+  color: rgb(194, 24, 91);
 }
 
 a:hover {
-    color: rgb(245, 89, 151);
+  color: rgb(245, 89, 151);
 }
 
 #link-div {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #img-div {
-    text-align: center;
+  text-align: center;
 }
 
 img {
-    height: 200px;
+  height: 200px;
 }
 
 mat-pass-toggle-visibility {
-    color: dimgray;
+  color: dimgray;
 }
 
-
 mat-divider {
-    margin-top: 16px;
-    margin-bottom: 16px;
-    background-color: rgba(255, 255, 255, 0.308);
-  }
+  margin-top: 16px;
+  margin-bottom: 16px;
+  background-color: rgba(255, 255, 255, 0.308);
+}
+
+mat-action-list {
+  max-height: 180px;
+  overflow: auto;
+}
+
+.custom-scroll-bar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.custom-scroll-bar::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.26);
+}
+
+.mat-table {
+  width: 100%;
+  background: #424242;
+  -webkit-text-fill-color: lightgrey;
+}
+
+th.mat-header-cell {
+  text-align: center;
+}
+
+.details:hover {
+  background-color: #0f040457;
+  color: white;
+}
+
+.designation {
+  margin-top: 2px;
+  font-size: 0.7rem;
+  color: lightgrey;
+}
