--- a/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
+++ b/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
@@ -6,7 +6,7 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="name"
         sortActionDescription="Sort by name"> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.menuItemName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="quantity">
