--- a/restaurant-front/src/modules/shared/components/employees/employees.component.scss
+++ b/restaurant-front/src/modules/shared/components/employees/employees.component.scss
@@ -21,3 +21,9 @@
     margin-left: 10px;
     font-size: large;
   }
+
+  .addEmployeeBttn {
+    text-align: right;
+    margin-right: 15px;
+    margin-bottom: 10px;
+  }
