--- a/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.html
+++ b/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.html
@@ -12,7 +12,7 @@
     <div class="row">
       <span style="margin-right: 50%">Price: </span>
       <span style="text-align: right"
-        >$ {{ this.menuItemWithIngredients.price }}.00
+        >$ {{ this.menuItemWithIngredients.price }}
       </span>
     </div>
 
