--- a/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.html
+++ b/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.html
@@ -56,7 +56,7 @@
 
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef>Price</th>
-          <td mat-cell *matCellDef="let element">$ {{ element.price }}.00</td>
+          <td mat-cell *matCellDef="let element">$ {{ element.price }}</td>
         </ng-container>
 
         <ng-container matColumnDef="status">
@@ -93,7 +93,7 @@
     <div class="row">
       <span style="margin-right: 50%; font-size: 1rem; color: lightgray;">Total cost: </span>
       <span style="text-align: right; font-size: 1rem; color: lightgray;"
-        >$ {{ this.totalCost }}.00
+        >$ {{ this.totalCost }}
       </span>
     </div>
 
