--- a/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
+++ b/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
@@ -68,7 +68,7 @@
     <div class="row">
       <span style="margin-right: 50%; font-size: 1rem; ">Total cost: </span>
       <span style="text-align: right; font-size: 1rem; "
-        >$ {{ this.totalCost }}.00
+        >$ {{ this.totalCost }}
       </span>
     </div>
 
