--- a/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
+++ b/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
@@ -59,8 +59,8 @@
       <mat-list-item (click)="this.viewAcceptedOrders()"
         >Accepted ordered items</mat-list-item
       >
-      <mat-list-item [routerLink]="['/add-drink']">
-        Add new drink
+      <mat-list-item [routerLink]="['/add-dish']">
+        Add new dish
       </mat-list-item>
     </mat-action-list>
 
@@ -87,11 +87,11 @@
           <div fxLayout="row wrap">
             <ng-container *ngFor="let image of data">
               <ng-container *ngFor="let image of data">
-                <img [src]="image.url" *ngIf="!this.isDishView && !this.isNewOrders && !this.isAcceptedOrders && !this.isOneDishView"/>
-                <app-dish-table *ngIf="this.isDishView"  (onClickedView) = "onClickedView($event)"></app-dish-table>
-                <!-- <app-new-orders *ngIf="this.isNewOrders"></app-new-orders>
-                <app-accepted-orders *ngIf="this.isAcceptedOrders"></app-accepted-orders> -->
-                <app-one-drink-card *ngIf="this.isOneDishView" [id]="this.idOfDish"></app-one-drink-card>
+                <img [src]="image.url" *ngIf="!this.isDishView && !this.isNewOrders && !this.isAcceptedOrders"/>
+                <app-dish-table *ngIf="this.isDishView"></app-dish-table>
+                <app-new-orders *ngIf="this.isNewOrders"></app-new-orders>
+                <app-accepted-orders *ngIf="this.isAcceptedOrders"></app-accepted-orders>
+               
               </ng-container>
             </ng-container>
           </div>
