--- a/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.html
+++ b/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.html
@@ -57,7 +57,7 @@
         </ng-container>
   
         <ng-container matColumnDef="view dish">
-          <th mat-header-cell *matHeaderCellDef > View dish </th>
+          <th mat-header-cell *matHeaderCellDef > View ingredients </th>
           <td mat-cell *matCellDef="let element"> <button (click)="clickedView(element)">view</button> </td>
         </ng-container>
   
