--- a/restaurant-front/src/modules/shared/components/employees/employees.component.html
+++ b/restaurant-front/src/modules/shared/components/employees/employees.component.html
@@ -86,6 +86,21 @@
       <td mat-cell *matCellDef="let element">{{ element.surname }}</td>
     </ng-container>
 
+    <!-- Telephone Column -->
+    <ng-container matColumnDef="Telephone">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header="telephone"
+        sortActionDescription="Sort by telephone"
+      >
+        Telephone
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.telephone | replaceUnderscore | titlecase }}
+      </td>
+    </ng-container>
+
     <!-- Paycheck Column -->
     <ng-container matColumnDef="Paycheck">
       <th
@@ -114,7 +129,24 @@
       </td>
     </ng-container>
 
-    <!-- Edit Column -->
+    <!-- Edit employee -->
+    <ng-container matColumnDef="Edit employee">
+      <td></td>
+      <th mat-header-cell *matHeaderCellDef>Edit employee</th>
+      <td mat-cell *matCellDef="let element; let i = index">
+        <button
+          mat-button
+          color="accent"
+          type="submit"
+          class="submit-button"
+          (click)="openEditEmployeeDialog(element)"
+        >
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Edit price Column -->
     <ng-container matColumnDef="Edit paycheck">
       <td></td>
       <th mat-header-cell *matHeaderCellDef>Edit paycheck</th>
