changed user default profile photo

--- a/restaurant-front/src/modules/admin/pages/add-employee/add-employee.component.html
+++ b/restaurant-front/src/modules/admin/pages/add-employee/add-employee.component.html
@@ -14,7 +14,7 @@
         <ng-template #elseTemplate>
           <img
             style="max-width: 50%; max-height: 50%"
-            src="assets/images/1176381.png"
+            src="assets/images/profile_default.png"
             class="img-responsive"
             alt="Default image"
           />
