--- a/restaurant-front/src/modules/shared/components/employees/employees.component.html
+++ b/restaurant-front/src/modules/shared/components/employees/employees.component.html
@@ -97,7 +97,7 @@
         Telephone
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.telephone | replaceUnderscore | titlecase }}
+        {{ element.telephone }}
       </td>
     </ng-container>
 
@@ -165,7 +165,6 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </table>
 </mat-card>
 
