--- a/restaurant-front/src/modules/shared/components/employees/employees.component.html
+++ b/restaurant-front/src/modules/shared/components/employees/employees.component.html
@@ -146,6 +146,23 @@
       </td>
     </ng-container>
 
+    <!-- Delete employee -->
+    <ng-container matColumnDef="Delete">
+      <td></td>
+      <th mat-header-cell *matHeaderCellDef>Delete</th>
+      <td mat-cell *matCellDef="let element; let i = index">
+        <button
+          mat-button
+          color="accent"
+          type="submit"
+          class="submit-button"
+          (click)="openDeleteEmployeeDialog(element.username)"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <!-- Edit price Column -->
     <ng-container matColumnDef="Edit paycheck">
       <td></td>
