--- a/restaurant-front/src/modules/admin/pages/edit-area/edit-area.component.html
+++ b/restaurant-front/src/modules/admin/pages/edit-area/edit-area.component.html
@@ -34,25 +34,16 @@
           </button>
         </div>
       </ng-template>
-      
-      <!-- <button mat-button class="menu-button" (click)="onRestaurantTablesClicked()">
-        <mat-icon> restaurant</mat-icon>
-        <span>Restaurant preview</span>
-      </button>
-  
-      <button mat-button class="menu-button" (click)="onEmployeesClicked()">
-        <mat-icon>person</mat-icon>
-        <span>Employees</span>
-      </button> -->
       <mat-divider></mat-divider>
-      <button mat-raised-button color="accent" class="addAreaBttn">
+      <button mat-raised-button color="accent" class="toolbarBttn" (click)="openAddAreaDialog()">
         <mat-icon>add</mat-icon>
-        <span>Add area</span>
+        <span> Add area</span>
       </button>
-      <!-- <button mat-button class="menu-button" (click)="onLogoutButtonClicked()" >
-        <mat-icon>logout</mat-icon>
-        <span>Logout</span>
-      </button> -->
+      <mat-divider></mat-divider>
+      <button mat-raised-button color="accent" class="toolbarBttn" (click)="return()">
+        <mat-icon>keyboard_backspace</mat-icon>
+        <span> Return</span>
+      </button>
     </mat-sidenav>
   
     <mat-sidenav-content>
@@ -62,4 +53,3 @@
     </mat-sidenav-content>
   
   </mat-sidenav-container>
-  <!-- <app-logout *ngIf="this.showModalLogout" (onLogoutClose)='onLogoutCloseClicked($event)'></app-logout> -->
