--- a/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.html
+++ b/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.html
@@ -61,7 +61,7 @@
 
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef>Status</th>
-          <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.status | replaceUnderscore }}</td>
         </ng-container>
       
         <ng-container matColumnDef="deliver">
