--- a/restaurant-front/src/modules/auth/pages/login/login-form.component.html
+++ b/restaurant-front/src/modules/auth/pages/login/login-form.component.html
@@ -74,6 +74,7 @@
           type="button"
           color="primary"
           class="btn btn-primary"
+          id="login-button"
           (click)="login()"
           [disabled]="loginForm.invalid"
         >
