--- a/restaurant-front/src/modules/shared/components/table-ingredients-dialog/table-ingredients-dialog.component.html
+++ b/restaurant-front/src/modules/shared/components/table-ingredients-dialog/table-ingredients-dialog.component.html
@@ -9,7 +9,7 @@
 
       <ng-container matColumnDef="isAlergen">
         <th mat-header-cell *matHeaderCellDef> Alergen </th>
-        <td mat-cell *matCellDef="let element"> {{element.isAlergen}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.alergen}} </td>
       </ng-container>
 
        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
