--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
@@ -44,13 +44,30 @@
     <mat-divider></mat-divider>
 
     <mat-action-list>
-      <mat-list-item [routerLink]="['/item-table']">Item Table</mat-list-item>
-      <mat-list-item [routerLink]="['/paychecks']">Paychecks</mat-list-item>
-      <mat-list-item [routerLink]="['/reports']">Reports</mat-list-item>
-      <mat-list-item [routerLink]="['/view-menu-items']">Menu</mat-list-item>
+      <mat-list-item (click)="this.activeView = '1'">Item view</mat-list-item>
+      <mat-list-item (click)="this.activeView = '2'">Menu</mat-list-item>
+      <mat-list-item (click)="this.activeView = '3'">Paychecks</mat-list-item>
+      <mat-list-item (click)="this.activeView = '4'">Reports</mat-list-item>
     </mat-action-list>
   </mat-sidenav>
-  <mat-sidenav-content> </mat-sidenav-content>
+  <mat-sidenav-content>
+    <div class="content mat-elevation-z8">
+      <div class="row">
+        <div class="col">
+          <div fxLayout="row wrap">
+            <ng-container>
+              <app-item-view *ngIf="this.activeView == '1'"></app-item-view>
+              <app-menu-view *ngIf="this.activeView == '2'"></app-menu-view>
+              <app-paycheck-table
+                *ngIf="this.activeView == '3'"
+              ></app-paycheck-table>
+              <app-report *ngIf="this.activeView == '4'"></app-report>
+            </ng-container>
+          </div>
+        </div>
+      </div>
+    </div>
+  </mat-sidenav-content>
 </mat-sidenav-container>
 <app-change-password
   *ngIf="this.showModalPasswordChange"
