--- a/restaurant-front/src/modules/bartender/pages/bartender-dashboard/bartender-dashboard.component.html
+++ b/restaurant-front/src/modules/bartender/pages/bartender-dashboard/bartender-dashboard.component.html
@@ -55,7 +55,7 @@
       <mat-list-item (click)="this.viewAcceptedOrders()"
         >Accepted ordered items</mat-list-item
       >
-      <mat-list-item [routerLink]="['/add-drink']">
+      <mat-list-item (click)="this.onAddingDrinkClick()"><!-- [routerLink]="['/add-drink']"> -->
         Add new drink
       </mat-list-item>
     </mat-action-list>
@@ -69,13 +69,14 @@
           <div class="col">
             <div fxLayout="row wrap">
               <ng-container *ngFor="let image of data">
-                <img [src]="image.url" *ngIf="!this.isDrinkView && !this.isNewOrders && !this.isAcceptedOrders && !this.isOneDrinkView && !this.isAcceptedOrderItems && !this.isNewOrderItems"/>
+                <img [src]="image.url" *ngIf="!this.isDrinkView && !this.isNewOrders && !this.isAcceptedOrders && !this.isOneDrinkView && !this.isAcceptedOrderItems && !this.isNewOrderItems && !this.isAdding"/>
                 <app-drink-table *ngIf="this.isDrinkView"  (onClickedView) = "onClickedView($event)"></app-drink-table>
                 <app-new-orders *ngIf="this.isNewOrderItems" [orderId]="this.idOrder"></app-new-orders> 
                 <app-accepted-orders *ngIf="this.isAcceptedOrderItems" [orderId]="this.idOrder"></app-accepted-orders>
                 <app-list-accepted-orders *ngIf="this.isAcceptedOrders" (onClickView)="onClickViewAccepted($event)"></app-list-accepted-orders>
                 <app-list-new-orders *ngIf="this.isNewOrders" (onClickView)="onClickViewNew($event)"></app-list-new-orders>
                 <app-one-drink-card *ngIf="this.isOneDrinkView" [id]="this.idOfDrink"></app-one-drink-card>
+                <app-add-drink *ngIf="this.isAdding"></app-add-drink>
               </ng-container>
             </div>
             <mat-paginator
@@ -87,7 +88,7 @@
             </mat-paginator>
           </div>
         </div>
-      </div>
+      </div> 
     </mat-sidenav-content>
   </mat-sidenav-container>
   <app-change-password *ngIf="this.showModalPasswordChange" (onClose)='onPasswordChangeClose($event)' ></app-change-password>
