--- a/restaurant-front/src/modules/head-chef/pages/add-dish/add-dish.component.scss
+++ b/restaurant-front/src/modules/head-chef/pages/add-dish/add-dish.component.scss
@@ -1,18 +1,26 @@
 #container-div {
   background-color: #303030;
   /*position: absolute;*/
-  top: 0;
+  height: calc(100vh - 98px);
   left: 0;
   padding-top: 0px;
   width: 100%;
-  height: 100%;
+  border-radius: 10px;
+  margin: 16px;
+  margin-left: 32px;
+  margin-top: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //height: 100%;
 }
 
 #form-holder-div {
   background-color: #424242;
   width: 500px;
   margin: auto;
-  margin-top: -80px;
+  margin-top: 50px;
   /*height: 300px;*/
   text-align: center;
   padding: 30px;
