--- a/restaurant-front/src/modules/shared/components/accepted-orders/accepted-orders.component.html
+++ b/restaurant-front/src/modules/shared/components/accepted-orders/accepted-orders.component.html
@@ -1,8 +1,9 @@
-<div id=page *ngIf = "this.loaded">
+<div id=page *ngIf = "this.loaded" class ="content">
     <app-order-view
-    typeBtn="finish" 
-    [note]="this.note" 
-    (acceptClicked)="onAccept($event)" 
-    (finishClicked)="onFinish($event)"
-    [items] = "this.acceptedItems"></app-order-view>
+        typeBtn="finish" 
+        [note]="this.note" 
+        (acceptClicked)="onAccept($event)" 
+        (finishClicked)="onFinish($event)"
+        [items] = "this.acceptedItems">
+    </app-order-view>
 </div>
