--- a/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.html
+++ b/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.html
@@ -2,7 +2,7 @@
     <h3>Dish card</h3>
       
     <div id="form-holder-div">
-      <form [formGroup]="searchForm">
+      <form [formGroup]="searchForm" class="example-form">
         <mat-form-field class="example-full-width">
           <span matPrefix> </span>
           <input
@@ -58,7 +58,16 @@
   
         <ng-container matColumnDef="view dish">
           <th mat-header-cell *matHeaderCellDef > View ingredients </th>
-          <td mat-cell *matCellDef="let element"> <button (click)="clickedView(element)">view</button> </td>
+          <td mat-cell *matCellDef="let element"> <button (click)="clickedView(element)"
+            color="accent"
+            type="submit"
+            class="submit-button"
+            id="submit-button"
+            matSuffix
+            mat-button
+          >
+          <mat-icon>search</mat-icon>
+        </button> </td>
         </ng-container>
   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
