--- a/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.scss
+++ b/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.scss
@@ -5,11 +5,13 @@
   left: 0;
   padding-top: 0px;
   width: 100%;
-  height: 100%;
+  height: 70%;
 }
 
 #form-holder-div {
   background-color: #424242;
+  height: 10%;
+  font-size: 15px;
 }
 
 h3 {
@@ -39,14 +41,15 @@ input {
   color: white;
 }
 
-.submit-button {
-  border: 1.5px solid dimgray;
+#submit-button {
+  border: 1.1px solid dimgray;
   margin-top: 20px;
-  width: 400px;
+  width: 100px;
+  height: 40px;
 }
 
 .submit-button:hover {
-  border: 1.5px solid rgb(194, 24, 91);
+  border: 1.1px solid rgb(194, 24, 91);
   background-color: rgb(180, 23, 86);
   color: white;
 }
@@ -87,21 +90,32 @@ mat-pass-toggle-visibility {
 table {
   width: 100%;
 }
-.example-form {
+#example-form {
   min-width: 150px;
   max-width: 500px;
   width: 100%;
+  height: 80%;
+  font-size: 15px;
 }
 
-.example-full-width {
-  width: 40%;
+#example-full-width {
+  width: 30%;
   margin: 3px;
+  height: 10%;
+  font-size: 15px;
 }
 mat-option {
   background-color: #303030;
   color: white;
+  height: 10%;
+  font-size: 15px;
 }
 
 mat-option:hover {
   color: rgb(194, 24, 91);
+  height: 10%;
+}
+#form-control {
+  height: 10%;
+  font-size: 15px;
 }
