--- a/restaurant-front/src/modules/shared/components/drink-table/drink-table.component.scss
+++ b/restaurant-front/src/modules/shared/components/drink-table/drink-table.component.scss
@@ -1,107 +1,121 @@
 #container-div {
-    background-color: #303030;
-    /*position: absolute;*/
-    top:0;
-    left:0;
-    padding-top: 0px;
-    width:100%;
-    height: 100%;
+  background-color: #303030;
+  /*position: absolute;*/
+  top: 0;
+  left: 0;
+  padding-top: 0px;
+  width: 100%;
+  height: 70%;
 }
 
 #form-holder-div {
-    background-color:  #424242;
-    
+  background-color: #424242;
+  height: 10%;
+  font-size: 15px;
 }
 
 h3 {
-    color: white;
+  color: white;
 }
 
 table {
-    width: 100%;
-    background-color: #424242;
-    border-bottom: white;
-    color: white;
-  }
+  width: 100%;
+  background-color: #424242;
+  border-bottom: white;
+  color: white;
+}
 table {
-    border-top: white;
-}  
-td, th{
-    border-bottom: white;
-    color: white;
+  border-top: white;
+}
+td,
+th {
+  border-bottom: white;
+  color: white;
 }
 
 mat-form-field {
-    width: 400px;
+  width: 400px;
 }
 
 input {
-    color: white;
+  color: white;
 }
 
-.submit-button {
-    border: 1.5px solid dimgray;
-    margin-top: 20px;
-    width: 400px;
+#submit-button {
+  border: 1.1px solid dimgray;
+  margin-top: 20px;
+  width: 100px;
+  height: 40px;
 }
 
 .submit-button:hover {
-    border: 1.5px solid rgb(194, 24, 91);
-    background-color: rgb(180, 23, 86);
-    color: white;
+  border: 1.1px solid rgb(194, 24, 91);
+  background-color: rgb(180, 23, 86);
+  color: white;
 }
 
 a {
-    color: rgb(194, 24, 91);
+  color: rgb(194, 24, 91);
 }
 
 a:hover {
-    color: rgb(245, 89, 151);
+  color: rgb(245, 89, 151);
 }
 
 #link-div {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #img-div {
-    text-align: center;
+  text-align: center;
 }
 
 img {
-    height: 200px;
+  height: 200px;
 }
 
 mat-pass-toggle-visibility {
-    color: dimgray;
+  color: dimgray;
 }
 
 .btn-link {
-    background-color: transparent;
-    border: none;
-    color: rgb(194, 24, 91);
+  background-color: transparent;
+  border: none;
+  color: rgb(194, 24, 91);
 }
 
 .btn-link:hover {
-    color: rgb(245, 89, 151);
+  color: rgb(245, 89, 151);
 }
 table {
-    width: 100%;
-  }
-  .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 40%;
-    margin: 3px;
-  }
-  mat-option {
-    background-color: #303030;
-    color: white;
+  width: 100%;
+}
+#example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+  height: 80%;
+  font-size: 15px;
+}
+
+#example-full-width {
+  width: 30%;
+  margin: 3px;
+  height: 10%;
+  font-size: 15px;
+}
+mat-option {
+  background-color: #303030;
+  color: white;
+  height: 10%;
+  font-size: 15px;
 }
 
 mat-option:hover {
-    color: rgb(194, 24, 91);
+  color: rgb(194, 24, 91);
+  height: 10%;
+}
+#form-control {
+  height: 10%;
+  font-size: 15px;
 }
