--- a/restaurant-front/src/modules/shared/components/list-accepted-orders/list-accepted-orders.component.html
+++ b/restaurant-front/src/modules/shared/components/list-accepted-orders/list-accepted-orders.component.html
@@ -1,6 +1,6 @@
-
-<mat-list class="example-card" *ngFor="let order of observable | async">
-    <mat-card (click) = onClick(this.order.id)>
+<div id="container-div">
+<mat-list  *ngFor="let order of observable | async">
+    <mat-card  class="example-card" (click) = onClick(this.order.id)>
         <mat-card-header>
             <mat-card-title> Order number: {{ this.order.id}} </mat-card-title>
             <mat-card-title> Table number: {{ this.order.tableId}} </mat-card-title>
@@ -8,5 +8,6 @@
     </mat-card>
 
 </mat-list>
-
-
+<br/>
+<div *ngIf = "this.dataSource.data.length == 0">There is no accepted orders</div>
+</div>
