--- a/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.html
+++ b/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.html
@@ -57,6 +57,18 @@
 
     <mat-divider></mat-divider>
 
+    <div *ngFor="let area of areas">
+      <button
+        mat-button
+        class="areaBttn"
+        (click)="openArea(area)"
+      >
+        {{ area.name }}
+      </button>
+    </div>
+
+    <mat-divider></mat-divider>
+
     <p class="designation">Active accounts</p>
 
     <mat-action-list
@@ -80,76 +92,26 @@
     </mat-action-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <!--TODO isidora-->
     <div class="content mat-elevation-z8">
-      <div class="row">
-        <button
-          mat-button
-          class="menu-button"
-          (click)="onRestaurantTableShowClicked(1)"
-        >
-          <span>Table 1</span>
-        </button>
-        <app-table-options
-          *ngIf="this.showModalRestaurantTableOptions == 1"
-          [tableNumber]="1"
+      <div class="title"><h1 class="text">{{activeArea.name}}</h1></div>
+      <div class="boundary">
+        <ng-container *ngFor="let table of activeArea.tables">
+          <button mat-raised-button cdkDragBoundary=".boundary"
+          cdkDrag cdkDragDisabled [cdkDragFreeDragPosition]="tablePositions[activeArea.tables.indexOf(table)]" 
+          (click)="onRestaurantTableShowClicked(table.id)"
+          [class]="table.claimed ? 'claimedTableBttn' : 'unclaimedTableBttn'">
+          {{table.tableNum}}</button>
+        </ng-container>
+      </div>
+      <app-table-options
+          *ngIf="this.showModalRestaurantTableOptions !== -1"
+          [tableNumber]="this.showModalRestaurantTableOptions"
           [refreshRequired]="this.refreshRestaurantTableRequired"
           (refreshFinished)="this.onRefreshFinished($event)"
           (onRestaurantTableClose)="onRestaurantTableCloseClicked($event)"
           (onViewOrderAndBill)="onViewOrderAndBillClicked($event)"
         ></app-table-options>
-      </div>
-      <div class="row">
-        <button
-          mat-button
-          class="menu-button"
-          (click)="onRestaurantTableShowClicked(2)"
-        >
-          <span>Table 2</span>
-        </button>
-        <app-table-options
-          *ngIf="this.showModalRestaurantTableOptions == 2"
-          [tableNumber]="2"
-          [refreshRequired]="this.refreshRestaurantTableRequired"
-          (refreshFinished)="this.onRefreshFinished($event)"
-          (onRestaurantTableClose)="onRestaurantTableCloseClicked($event)"
-          (onViewOrderAndBill)="onViewOrderAndBillClicked($event)"
-        ></app-table-options>
-      </div>
-      <div class="row">
-        <button
-          mat-button
-          class="menu-button"
-          (click)="onRestaurantTableShowClicked(3)"
-        >
-          <span>Table 3</span>
-        </button>
-        <app-table-options
-          *ngIf="this.showModalRestaurantTableOptions == 3"
-          [tableNumber]="3"
-          [refreshRequired]="this.refreshRestaurantTableRequired"
-          (refreshFinished)="this.onRefreshFinished($event)"
-          (onRestaurantTableClose)="onRestaurantTableCloseClicked($event)"
-          (onViewOrderAndBill)="onViewOrderAndBillClicked($event)"
-        ></app-table-options>
-      </div>
-      <!--
-      <div class="row">
-        <div class="col">
-          <div fxLayout="row wrap">
-            <ng-container *ngFor="let image of data">
-              <img [src]="image.url" />
-            </ng-container>
-          </div>
-          <mat-paginator
-            [length]="data2.length"
-            [pageSize]="pageSize"
-            [pageIndex]="currentPage"
-            (page)="getData($event)"
-          >
-          </mat-paginator>
-        </div>
-      </div>-->
+
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
