--- a/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
+++ b/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
@@ -50,14 +50,14 @@
     <mat-divider></mat-divider>
 
     <mat-action-list>
-        <mat-list-item (click)="this.viewDishCard()"
+        <mat-list-item (click)="this.state=1"
         >Dish card</mat-list-item
       >
-      <mat-list-item (click)="this.viewNewOrders()"
-        >New ordered items</mat-list-item
+      <mat-list-item (click)="this.state=5"
+        >New orderes</mat-list-item
       >
-      <mat-list-item (click)="this.viewAcceptedOrders()"
-        >Accepted ordered items</mat-list-item
+      <mat-list-item (click)="this.state=4"
+        >Accepted orders</mat-list-item
       >
     </mat-action-list>
 
@@ -84,12 +84,12 @@
           <div fxLayout="row wrap">
             <ng-container *ngFor="let image of data">
               <ng-container *ngFor="let image of data">
-                <img [src]="image.url" *ngIf="!this.isDishView && !this.isNewOrders && !this.isAcceptedOrders && !this.isNewOrderItems && !this.isAcceptedOrderItems"/>
-                <app-dish-table *ngIf="this.isDishView"></app-dish-table>
-                 <app-new-orders *ngIf="this.isNewOrderItems" [orderId]="this.idOrder"></app-new-orders> 
-                <app-accepted-orders *ngIf="this.isAcceptedOrderItems" [orderId]="this.idOrder"></app-accepted-orders>
-                <app-list-accepted-orders *ngIf="this.isAcceptedOrders" (onClickView)="onClickViewAccepted($event)"></app-list-accepted-orders>
-                <app-list-new-orders *ngIf="this.isNewOrders" (onClickView)="onClickViewNew($event)"></app-list-new-orders>
+                <img [src]="image.url" *ngIf="this.state===0"/>
+                <app-dish-table *ngIf="this.state===1"></app-dish-table>
+                 <app-new-orders *ngIf="this.state===2" [orderId]="this.idOrder"></app-new-orders> 
+                <app-accepted-orders *ngIf="this.state===3" [orderId]="this.idOrder"></app-accepted-orders>
+                <app-list-accepted-orders *ngIf="this.state===4" (onClickView)="onClickViewAccepted($event)"></app-list-accepted-orders>
+                <app-list-new-orders *ngIf="this.state===5" (onClickView)="onClickViewNew($event)"></app-list-new-orders>
               </ng-container>
             </ng-container>
           </div>
