Update report tests

--- a/restaurant-front/src/modules/manager/pages/report/report.component.html
+++ b/restaurant-front/src/modules/manager/pages/report/report.component.html
@@ -5,6 +5,7 @@
         <button
           mat-button
           class="type-button"
+          id="income-and-sold-button"
           (click)="onChangeTypeClick('incomeAndSold')"
         >
           Income and Sold
@@ -12,6 +13,7 @@
         <button
           mat-button
           class="type-button"
+          id="paychecks-button"
           (click)="onChangeTypeClick('paychecks')"
         >
           Paychecks
@@ -19,6 +21,7 @@
         <button
           mat-button
           class="type-button"
+          id="preparation-costs-button"
           (click)="onChangeTypeClick('preparationCosts')"
         >
           Preparation Costs
@@ -39,6 +42,7 @@
         <button
           mat-button
           class="period-button"
+          id="monthly-button"
           (click)="onChangePeriodClick('monthly')"
         >
           Monthly
@@ -46,6 +50,7 @@
         <button
           mat-button
           class="period-button"
+          id="quarterly-button"
           (click)="onChangePeriodClick('quarterly')"
         >
           Quarterly
@@ -53,6 +58,7 @@
         <button
           mat-button
           class="period-button"
+          id="annual-button"
           (click)="onChangePeriodClick('annual')"
         >
           Annual
