--- a/restaurant-front/src/modules/manager/components/item-card/item-card.component.html
+++ b/restaurant-front/src/modules/manager/components/item-card/item-card.component.html
@@ -25,7 +25,7 @@
       <p>Drink type:{{ getDrink(this.item).drinkType | titlecase }}</p>
       <p>
         Drink container:
-        {{ getDrink(this.item).container | titlecase }}
+        {{ getDrink(this.item).containerType | titlecase }}
       </p>
     </div>
 
