Item view page test

--- a/restaurant-front/src/modules/shared/components/logout/logout.component.html
+++ b/restaurant-front/src/modules/shared/components/logout/logout.component.html
@@ -23,6 +23,7 @@
         type="button"
         color="primary"
         class="btn btn-primary"
+        id="confirm-logout-button"
         (click)="confirm()"
       >
         Confirm
