--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
@@ -36,7 +36,12 @@
       <span>Change password</span>
     </button>
 
-    <button mat-button class="menu-button" (click)="onLogoutButtonClicked()">
+    <button
+      mat-button
+      class="menu-button"
+      (click)="onLogoutButtonClicked()"
+      id="logout-button"
+    >
       <mat-icon>logout</mat-icon>
       <span>Logout</span>
     </button>
@@ -56,12 +61,12 @@
         <div class="col">
           <div fxLayout="row wrap">
             <ng-container>
-              <app-item-view *ngIf="this.activeView == '1'"></app-item-view>
-              <app-menu-view *ngIf="this.activeView == '2'"></app-menu-view>
+              <app-item-view *ngIf="this.activeView === '1'"></app-item-view>
+              <app-menu-view *ngIf="this.activeView === '2'"></app-menu-view>
               <app-paycheck-table
-                *ngIf="this.activeView == '3'"
+                *ngIf="this.activeView === '3'"
               ></app-paycheck-table>
-              <app-report *ngIf="this.activeView == '4'"></app-report>
+              <app-report *ngIf="this.activeView === '4'"></app-report>
             </ng-container>
           </div>
         </div>
