--- a/restaurant-front/src/modules/manager/pages/menu-view/menu-view.component.html
+++ b/restaurant-front/src/modules/manager/pages/menu-view/menu-view.component.html
@@ -7,8 +7,8 @@
       type="text"
       placeholder="Search..."
       formControlName="search"
-      id="itemSearch"
-      name="itemSearch"
+      id="item-search"
+      name="item-search"
     />
     <button
       color="accent"
